# kv_server

./: Cargo.toml  build.rs
examples/: client.rs  summy_server.rs
src/: lib.rs
src/errors/: mod.rs
src/pb/: abi.proto  abi.rs  mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs
