[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.44"
bytes = "1"                     #  高性能网络buffer 库
prost = "0.9.0"                 #处理proto 代码
tracing = "0.1.27"              # 日志处理
dashmap = "5.5.0"
hyper = { version = "0.14.27" }
[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.3.0" # 异步处理proto 
futures = "0.3" # 异步处理
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] } # 异步处理
serde = { version = "1.0.174", features = ["derive"] }
tracing-subscriber = "0.3.17" # 日志处理
[build-dependencies]
prost-build = "0.9.0" # 处理proto
